[tool.poetry]
name = "introductiontoimageprocessing"
version = "0.1.0"
description = ""
authors = ["Maciej Grzybacz <128727060+MaciejGrzybacz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
notebook = "^7.2.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
